# honeyBFT

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: BuildBlst.cmake  dependencies.cmake
lib/core/: CMakeLists.txt
lib/core/include/core/: common.hpp  concepts.hpp
lib/core/include/core/coin/: coin_core.hpp  common_coin.hpp  concept.hpp  messages.hpp
lib/core/include/core/rbc/: concept.hpp  messages.hpp  rbc_core.hpp  reliable_broadcast.hpp
lib/core/src/coin/: coin_core.cc
lib/core/src/rbc/: rbc_core.cc
lib/core/tests/: CMakeLists.txt  test_coin.cc  test_rbc.cc  test_rbc_core.cc  test_rbc_core_utils.hpp  test_rbc_driver.cc  utils_simple_task.hpp
lib/crypto/: CMakeLists.txt
lib/crypto/cmake/: BuildBlst.cmake  BuildISAL.cmake
lib/crypto/include/crypto/: Fr.hpp  aes.hpp  common.hpp  ecdsa.h  ecdsa.hpp  erasure_code.hpp  erasure_coding.hpp  error.hpp  merkle_tree.hpp  tbls.hpp  tpke.hpp  utils.hpp
lib/crypto/include/crypto/blst/: P1.hpp  P2.hpp  PT.hpp  Scalar.hpp  blst_fwd.hpp  blst_wrapper.hpp
lib/crypto/include/crypto/threshold/: key_gen.hpp  math.hpp  tbls.hpp  tpke.hpp  types.hpp  utils.hpp
lib/crypto/libs/: .gitignore
lib/crypto/src/: aes.cc  blst.cc  ecdsa.cc  erasure_code.cc  merkle_tree.cc  tbls.cc  tpke.cc  utils.cc
lib/crypto/src/blst/: impl_common.hpp  p1.cc  p1_affine.cc  p2.cc  p2_affine.cc  pt.cc  scalar.cc
lib/crypto/src/threshold/: math.hpp
lib/crypto/tests/: CMakeLists.txt  merkle_test_utils.hpp  test_ecdsa.cc  test_erasure_code.cc  test_merkle_tree.cc  test_tbls.cc  test_tpke.cc
